# Poker

./: .codacy.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  codecov.yml
CMake/: CompileOptions.cmake
Extensions/Client/: CMakeLists.txt
Extensions/Client/Sources/: main.cc
Extensions/Console/: CMakeLists.txt
Extensions/Console/Includes/Console/: ConsolePlayer.h  temp.h
Extensions/Console/Sources/Console/: ConsolePlayer.cc  main.cc
Extensions/Server/: CMakeLists.txt
Extensions/Server/Includes/Server/: Connection.h  ConnectionPlayer.h  GameManager.h  Server.h  Session.h
Extensions/Server/Sources/Server/: Connection.cc  ConnectionPlayer.cc  GameManager.cc  Server.cc  Session.cc  main.cc
Includes/Cards/: card.h
Includes/Poker/Cards/: Card.h  CardDeck.h  CardDecks.h  CardEnums.h  card.h
Includes/Poker/Games/: Game.h  GameConfig.h  GameEnums.h  GameManager.h  Player.h  Turn.h
Includes/Poker/Players/: Player.h  RandomPlayer.h
Includes/Poker/Task/: BettingTask.h  CardTask.h  ITask.h  TaskEnums.h  TaskStatus.h
Includes/Poker/Task/Betting/: AllInTask.h  BetTask.h  CallTask.h  CheckTask.h  FoldTask.h  RaiseTask.h
Scripts/: Dockerfile.cosmic  Dockerfile.disco  Dockerfile.disco.clang-latest  Dockerfile.disco.gcc-latest  travis_build_codecov.sh  travis_build_docker.sh
Sources/: test.cc
Sources/Poker/: CMakeLists.txt  ITask.cc
Sources/Poker/Cards/: Card.cc  CardDeck.cc  CardDecks.cc
Sources/Poker/Games/: Game.cc  GameConfig.cc  GameManager.cc  Player.cc  Turn.cc
Sources/Poker/Players/: Player.cc  RandomPlayer.cc
Sources/Poker/Task/: ITask.cc
Sources/Poker/Task/Betting/: AllInTask.cc  BetTask.cc  CallTask.cc  CheckTask.cc  FoldTask.cc  RaiseTask.cc
UnitTest/: CMakeLists.txt  main.cc
UnitTest/Cards/: CardTests.cc  DeckTests.cc
UnitTest/Games/: GameTests.cc  TurnTests.cc
